kubernetes/argocd/main-cluster/manifests/qbittorrent/qbittorrent.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
          - name: net.ipv6.conf.all.disable_ipv6
            value: "1"
      containers:              
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.4
          imagePullPolicy: Always            
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: appdata
              mountPath: /config
            - name: downloads
              mountPath: /downloads              
        - name: vpn
          image: qmcgaw/gluetun:v3.41.3
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: qbittorrent-appdata
        - name: downloads
          nfs:
            server: ceph-nfs.home
            path: /cephfs/media/downloads
