kubernetes/argocd/main-cluster/manifests/qbittorrent/qbittorrent.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
