kubernetes/argocd/main-cluster/manifests/qbittorrent/qbittorrent.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  rules:
  - host: qbittorrent.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port: 
              number: 8080
